update content int06-6

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
@@ -52,11 +52,16 @@
 
 
     <div *ngIf="showData">
+      <br>
       <div class="ui top attached header">
         <div class="ui grid">
           <div class="right aligned column">
             <div class="ui mini primary button" (click)="compareData()">
               <i class="exchange icon"></i>เปรียบเทียบ TR
+            </div>
+
+            <div class="ui mini primary button" (click)="addData()">
+              <i class="print icon"></i>พิมพ์
             </div>
           </div>
         </div>
