--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5-2/int06-5-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5-2/int06-5-2.component.html
@@ -25,6 +25,16 @@
 
     <div class="ui top attached header">
       <div class="ui grid">
+        <div class="right aligned column">
+          <div class="ui mini primary button" (click)="addData()">
+            <i class="print icon"></i>พิมพ์
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached header">
+      <div class="ui grid">
         <div class="one wide column">
           <i class="angle left icon"></i>
         </div>
@@ -206,7 +216,7 @@
                 <img class="image-width-16" src="assets/images/flower.JPG">
               </td>
               <td>
-                <img class="image-width-18" src="assets/images/full-moon.JPG">
+                <img class="image-width" src="assets/images/full-moon.JPG">
               </td>
               <td>
                 <img class="image-width-16" src="assets/images/square.JPG">
@@ -215,7 +225,7 @@
               </td>
               <td></td>
               <td>
-                <img class="image-width-18" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td></td>
               <td></td>
