--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-1/int06-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-1/int06-6-1.component.html
@@ -1,3 +1,98 @@
-<p>
-  check-personal-compensation-withdrawal-calendar works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <div class="ui large steps">
+      <div class="step" style="width: 240px;">
+        <i class="user icon"></i>
+        <div class="content">
+          <div class="title">ข้อมูลเจ้าหน้าที่</div>
+        </div>
+      </div>
+      <div class="active step" style="width: 240px;">
+        <i class="calendar icon"></i>
+        <div class="content">
+          <div class="title">ปฏิทินเบี้ยเลี้ยง</div>
+        </div>
+      </div>
+      <div class="step" style="width: 240px;">
+        <i class="desktop icon"></i>
+        <div class="content">
+          <div class="title">แสดงผล</div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="ui header">ปฏิทินโอที</h2>
+
+    <div class="ui top attached header">
+      <span>ปฏิทินเบี้ยเลี้ยง</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ชื่อ</label>
+            <input class="custom-readonly" type="text" value="นายวรชิต" readonly="">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">นามสกุล</label>
+            <input class="custom-readonly" readonly="" type="text" value="วันจันทร์">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ตำแหน่ง</label>
+            <input class="custom-readonly" readonly="" type="text" value="นักวิชาการตรวจสอบภายในชำนาญการ">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ประเภทบุคคล</label>
+            <input class="custom-readonly" readonly="" type="text" value="บุคคลภายใน">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ประเภทงาน</label>
+            <input class="custom-readonly" readonly="" type="text" value="ประธาน">
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="ui top attached header">
+      <div class="ui grid">
+        <div class="one wide column">
+          <i class="angle left icon"></i>
+        </div>
+        <div class="fourteen wide center aligned column">
+          <span>พฤศจิกายน</span>
+        </div>
+        <div class="one wide right aligned column">
+          <i class="angle right icon"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached segment">
+      <br>
+      <div class="ui center aligned grid">
+        <img src="assets/images/int06-6.JPG" style="width: 100%;">
+      </div>
+      <div class="ui center aligned grid">
+        <div class="eight wide column">
+          <button class="ui mini primary button width-100" routerLink="/int06-6-2">
+            <i class="save icon"></i>
+            บันทึก
+          </button>
+          <button class="ui mini button width-100">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
