--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-4/int06-4-2/int06-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-4/int06-4-2/int06-4-2.component.html
@@ -25,6 +25,16 @@
 
     <div class="ui top attached header">
       <div class="ui grid">
+        <div class="right aligned column">
+          <div class="ui mini primary button" (click)="addData()">
+            <i class="print icon"></i>พิมพ์
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached header">
+      <div class="ui grid">
         <div class="one wide column">
           <i class="angle left icon"></i>
         </div>
