--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-2/int06-6-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-2/int06-6-2.component.html
@@ -1,3 +1,280 @@
-<p>
-  check-personal-compensation-withdrawal-display works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <div class="ui large steps">
+      <div class="step" style="width: 240px;">
+        <i class="user icon"></i>
+        <div class="content">
+          <div class="title">ข้อมูลเจ้าหน้าที่</div>
+        </div>
+      </div>
+      <div class="step" style="width: 240px;">
+        <i class="calendar icon"></i>
+        <div class="content">
+          <div class="title">ปฏิทินเบี้ยเลี้ยง</div>
+        </div>
+      </div>
+      <div class="active step" style="width: 240px;">
+        <i class="desktop icon"></i>
+        <div class="content">
+          <div class="title">แสดงผล</div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="ui header">แสดงผล</h2>
+
+    <div class="ui top attached header">
+      <div class="ui grid">
+        <div class="right aligned column">
+          <div class="ui mini primary button" (click)="addData()">
+            <i class="print icon"></i>พิมพ์
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached header">
+      <div class="ui grid">
+        <div class="one wide column">
+          <i class="angle left icon"></i>
+        </div>
+        <div class="fourteen wide center aligned column">
+          <span>พฤศจิกายน</span>
+        </div>
+        <div class="one wide right aligned column">
+          <i class="angle right icon"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached segment">
+      <div style="overflow-x: scroll">
+        <table class="ui small center aligned celled table" style="width: 150%;">
+          <thead>
+            <tr>
+              <th>ชื่อ/วันที่</th>
+              <th>1</th>
+              <th>2</th>
+              <th>3</th>
+              <th style="color: red">4</th>
+              <th style="color: red">5</th>
+              <th>6</th>
+              <th>7</th>
+              <th>8</th>
+              <th>9</th>
+              <th>10</th>
+              <th style="color: red">11</th>
+              <th style="color: red">12</th>
+              <th>13</th>
+              <th>14</th>
+              <th>15</th>
+              <th>16</th>
+              <th>17</th>
+              <th style="color: red">18</th>
+              <th style="color: red">19</th>
+              <th>20</th>
+              <th>รวมเงิน</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="text-align: left;">นายวรชิต วันจันทร์</td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+                <br>
+                <img class="image-width" src="assets/images/moon.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/squre.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+                <br>
+                <img class="image-width" src="assets/images/full-moon.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td style="text-align: right">10,500</td>
+            </tr>
+            <tr>
+              <td style="text-align: left;">นายบี วันอังคาร</td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/moon.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td style="text-align: right;">3,600</td>
+            </tr>
+            <tr>
+              <td style="text-align: left;">นายซี วันพุธ</td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/full-moon.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/full-moon.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width-16" src="assets/images/moon.JPG">
+                <br>
+                <img class="image-width-16" src="assets/images/flower.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/full-moon.JPG">
+              </td>
+              <td>
+                <img class="image-width-16" src="assets/images/triangle.JPG">
+                <br>
+                <img class="image-width-16" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td style="text-align: right;">4,500</td>
+            </tr>
+            <tr>
+              <td style="text-align: left;">นายดี วันพฤหัสบดี</td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/full-moon.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+                <br>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td style="text-align: right;">3,600</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <div class="ui grid">
+        <div class="one wide column">
+          หมายเหตุ*
+        </div>
+        <div class="six wide column">
+          เบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
+          <img src="assets/images/triangle.JPG">
+          <br> ปฏิบัติงานนอกเวลา
+          <img src="assets/images/square.JPG">
+          <br> เดินทางไปราชการอื่น
+          <img src="assets/images/moon.JPG">
+          <br> อยู่เวร
+          <img src="assets/images/full-moon.JPG">
+          <br> ลาป่วย/ลาพักผ่อน
+          <img src="assets/images/flower.JPG">
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
