--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -51,6 +51,10 @@ label.custom-label-w-10 {
     width: 10em !important;
 }
 
+label.custom-label-w-5 {
+    width: 5em !important;
+}
+
 .bg-row-highlight {
     background-color: rgb(241, 126, 126) !important;
 }
@@ -65,6 +69,10 @@ label.custom-label-w-10 {
 
 .bg-row-purple-highlight {
     background-color: rgb(222, 177, 236) !important;
+}
+
+.bg-row-light-gray-highlight {
+    background-color: rgb(250, 250, 251) !important;
 }
 
 td.right {
