rename file check-stamp-yearly to int05-1

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -42,7 +42,7 @@
                             <i class="dropdown icon"></i>
                             ตรวจสอบแสตมป์
                             <div class="menu">
-                                <a class="item" [routerLink]="['/check-stamp-yearly']" routerLinkActive="active">เปรียบเทียบรวมทั้งปีงบประมาณ</a>
+                                <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">เปรียบเทียบรวมทั้งปีงบประมาณ</a>
                                 <a class="item" [routerLink]="['/check-stamp-branch']" routerLinkActive="active">เปรียบเทียบรายสาขา</a>
                             </div>
                         </div>
