--- a/workspace/ims-client/src/app/buckwaframework/project/pages/compare-report-asset/compare-report-asset.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/compare-report-asset/compare-report-asset.component.html
@@ -3,28 +3,34 @@
 
     <h2 class="ui header">อัพโหลดรายงานสินทรัพย์</h2>
 
-    <div class="ui segment">
-      <h3 class="ui header">รายงานสินทรัพย์ (GFMIS)</h3>
-      <div class="ui grid">
-        <div class="six wide column">
-          <input type="file" />
-        </div>
-      </div>
+    <div class="ui top attached header">
+      <span>อัพโหลดรายงานสินทรัพย์</span>
+    </div>
 
-      <h3 class="ui header">รายงานสินทรัพย์ (พื้นที่)</h3>
-      <div class="ui grid">
-        <div class="six wide column">
-          <input type="file" />
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">รายงานสินทรัพย์ (GFMIS)</label>
+            <input type="file" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">รายงานสินทรัพย์ (พื้นที่)</label>
+            <input type="file" />
+          </div>
         </div>
       </div>
 
       <div class="ui center aligned grid">
         <div class="four wide column">
-          <button class="ui primary button" (click)="uploadFile()">
+          <button class="ui mini primary button" (click)="uploadFile()">
             <i class="upload icon"></i>
             อัพโหลด
           </button>
-          <button class="ui button" (click)="clearFile()">
+          <button class="ui mini button" (click)="clearFile()">
             <i class="trash outline icon"></i>
             ลบไฟล์
           </button>
