rename file check-stamp-branch to int05-2

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -43,7 +43,7 @@
                             ตรวจสอบแสตมป์
                             <div class="menu">
                                 <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">เปรียบเทียบรวมทั้งปีงบประมาณ</a>
-                                <a class="item" [routerLink]="['/check-stamp-branch']" routerLinkActive="active">เปรียบเทียบรายสาขา</a>
+                                <a class="item" [routerLink]="['/int05-2']" routerLinkActive="active">เปรียบเทียบรายสาขา</a>
                             </div>
                         </div>
                         <a class="item" [routerLink]="['/compare-report-asset']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
