rename file compare-report-asset to int05-3

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -46,7 +46,7 @@
                                 <a class="item" [routerLink]="['/int05-2']" routerLinkActive="active">เปรียบเทียบรายสาขา</a>
                             </div>
                         </div>
-                        <a class="item" [routerLink]="['/compare-report-asset']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
+                        <a class="item" [routerLink]="['/int05-3']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
                         <a class="item" [routerLink]="['/save-result-trading']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
                     </div>
                 </div>
