rename file save-result-trading to int05-4

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <a class="item" [routerLink]="['/int05-3']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
-                        <a class="item" [routerLink]="['/save-result-trading']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                        <a class="item" [routerLink]="['/int05-4']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
                     </div>
                 </div>
                 <div class="ui simple dropdown item">
