--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
@@ -134,7 +134,7 @@
 </div>
 
 
-<div id="modalSaveResultTrading" class="ui modal hidden transition">
+<div id="modalInt054" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
     บันทึกผลการจัดซื้อจัดจ้าง
