--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int03-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int03-1.component.html
@@ -37,7 +37,7 @@
 
       <div class="ui center aligned grid">
         <div class="four wide column">
-          <button class="ui mini primary button" routerLink='/select-inc-summary'>
+          <button class="ui mini primary button" routerLink='/int03-1-1'>
             <i class="upload icon"></i>
             อัพโหลด
           </button>
