--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
@@ -82,11 +82,11 @@
       <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
-          <button class="ui primary button" routerLink="/result-analysis-gf-inc">
+          <button class="ui mini primary button" routerLink="/int03-1-2">
             <i class="checkmark box icon"></i>
             ตรวจสอบ
           </button>
-          <button class="ui button" routerLink="/import-gf-accounting">
+          <button class="ui mini button" routerLink="/int03-1">
             <i class="arrow left icon"></i>
             ย้อนกลับ
           </button>
