--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-2/int03-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-2/int03-1-2.component.html
@@ -53,7 +53,7 @@
 
       <div class="ui center aligned grid">
         <div class="six wide column">
-          <button class="ui button" routerLink="/select-inc-summary">
+          <button class="ui mini button" routerLink="/int03-1-1">
             <i class="arrow left icon"></i>
             ย้อนกลับ
           </button>
