add new int07-7- (1-5) pages

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -72,6 +72,7 @@
                         <a class="item" [routerLink]="['/int07-4']" routerLinkActive="active">ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</a>
                         <a class="item" [routerLink]="['/int07-5']" routerLinkActive="active">ตรวจสอบเปรียบเทียบบัญชีเคลื่อนไหวเงินฝากคลังกระทบยอด 3 บัญชี</a>
                         <a class="item" [routerLink]="['/int07-6']" routerLinkActive="active">ตรวจสอบการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>
+                        <a class="item" [routerLink]="['/int07-7']" routerLinkActive="active">สร้างกระดาษทำการเงินฝากคลัง</a>
                     </div>
                 </div>
             </div>
